--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
   <body>
     <div class="header">
       <h1>
-      My invention
+      FireGuard
       </h1>
     </div>
     <div class="description">
-      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."
+      Revolutionizing approach to wildfire prediction and prevention with AI technologies  
     </div>
     
     <div class="video">
@@ -19,21 +19,18 @@
       </iframe>
     </div>
     <div class="resources">
-      <h2>Resources</h2>
+      <h2></h2>
       <ul>
         <li>
-          <a href="https://azure.microsoft.com/en-gb/free/students/">Azure for students</a>
         </li>
         <li>
-          <a href="https://marketplace.visualstudio.com/items?itemName=ms-azuretools.vscode-azurestaticwebapps">Azure Static Web apps extension</a>
         </li>
         <li>
-          <a href="https://code.visualstudio.com/download">Visual Studio Code download</a>
         </li>
       </ul>
     </div>
     <div class="footer">
-      &#169; copyright NAME 2022
+      UCL Hackathon
     </div>
     
   </body>
