--- a/index.html
+++ b/index.html
@@ -11,6 +11,15 @@
     <div class="description">
       Revolutionizing approach to wildfire prediction and prevention with AI technologies  
     </div>
+
+    <div class="description">
+      Recently, wildfires have been increasing in frequency and severity like never before, 
+      with the UN predicting the number of wildfires to increase by 50% by 2100. 
+      There is no doubt that with this staggering increase will come a pressing 
+      need to find alternative solutions to both prevent the start of wildfires and mitigate 
+      their detrimental effects, which is why our team seeks to find a solution to this using 
+      Artificial Intelligence. 
+    </div>
     
     <div class="video">
       <!--
