--- a/index.html
+++ b/index.html
@@ -21,6 +21,13 @@
       Artificial Intelligence. 
     </div>
     
+    <div class="description">
+      Even protected from the burning flames, people are still at risk of ash and embers 
+      falling from the sky. Smoke in the air causes burning eyes and respiratory illnesses, 
+      but most importantly lack of oxygen which prevents people from escaping and causes high 
+      death rates like in Maui and Greece wildfires in 2023.     
+    </div>
+    
     <div class="video">
       <!--
       <iframe width="420" 
